Fix permission site origin overflow

--- a/ui/components/app/permissions-connect-header/index.scss
+++ b/ui/components/app/permissions-connect-header/index.scss
@@ -2,6 +2,7 @@
   flex: 0;
 
   &__icon {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
