--- a/ui/components/ui/site-origin/index.scss
+++ b/ui/components/ui/site-origin/index.scss
@@ -1,4 +1,6 @@
 .site-origin {
+  width: 100%;
+  
   .chip__left-icon {
     padding: 4px 0 4px 8px;
   }
